k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-manager-api
  namespace: video-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-manager-api
  template:
    metadata:
      labels:
        app: video-manager-api
    spec:
      serviceAccountName: video-processor-sa
      securityContext: {}
      containers:
        - name: video-manager-api
          image: 473688631666.dkr.ecr.us-east-1.amazonaws.com/dev-video-manager-api:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5   
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 5
